NO JIRA - fix tooltip z-index

--- a/Tooltip/src/style.less
+++ b/Tooltip/src/style.less
@@ -100,6 +100,9 @@
 }
 
 .ToolTipPortal {
+    & > div {
+        z-index: 9999999;
+    }
     span {
         margin-top: 1px !important;
     }
